2011-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updated Description, also state current Windows
	run-time issue more prominently

 	* inst/examples/standard/rinside_sample1.cpp: Minor simplification
	* inst/examples/standard/rinside_sample2.cpp: Idem
	* inst/examples/standard/rinside_sample3.cpp: Idem
	* inst/examples/standard/rinside_sample5.cpp: Idem
	* inst/examples/standard/rinside_sample7.cpp: Idem

2011-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS: Added, at long last, with backfills based on the
	ChangeLog and blog postings

	* R/RInsidePaths.R (RInsideCxxFlags): Do not use quotes around path

2011-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/: Moved merged SVN+PNG files back into top-level

	* inst/examples/qt/qtdensitySVG/qtdensity.pro: No longer need to set
	-Wno-unused-parameter as Rcpp 0.9.3 has a fix

2011-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/qtdensitySVG/qtdensity.cpp: Merged the PNG and SVG
	version by using a boolean based on whether cairoDevice loaded or not

2011-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/: Split qtdensity example into default (png) and
	svg variants as svg needs cairoDevice and has a clipping bug

2011-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/qtdensity.h: Small rearrangements and
	simplifications

2011-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/*: Added new example combining RInside with Qt
	illustrating the standard 'slider to select bandwidth for density
	estimate' example found in demo(tkdensity) and other places

2011-03-06  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample11.cpp: New example in
	response to r-help question by Paul Smith

2011-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample6.cpp: Updated to
	direct `R["a"] = a;' assignments

2011-01-26  Dirk Eddelbuettel  <edd@debian.org>
